// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DateField > should render correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 100%;
}

.emotion-0 div.react-datepicker-wrapper {
  display: block;
}

.emotion-0 div.react-datepicker__input-container {
  display: block;
}

.emotion-0 div.react-datepicker__triangle {
  display: none;
}

.emotion-0 div.react-datepicker__month-container {
  padding: 1rem;
  width: 20rem;
}

.emotion-0 .react-datepicker-popper {
  z-index: 1000;
}

.emotion-0 .calendar {
  font-family: Inter,Asap,sans-serif;
  border-color: #e9eaeb;
  background-color: #ffffff;
  box-shadow:0: 0px 4px 8px 0px #22263829;
  1: 0px 8px 24px 0px #2226383d;
}

.emotion-0 .calendar .react-datepicker__header {
  color: #3f4250;
  background-color: #ffffff;
  border-bottom: none;
  text-align: inherit;
  display: block;
  padding-top: 0;
  position: inherit;
}

.emotion-0 .calendar .react-datepicker__triangle {
  border-bottom-color: #f9f9fa;
}

.emotion-0 .calendar .react-datepicker__month {
  margin: 0;
}

.emotion-0 .calendar .react-datepicker__day-names {
  margin-top: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-0 .calendar .react-datepicker__day-name {
  font-family: Inter,Asap,sans-serif;
  color: #3f4250;
  font-weight: 500;
  font-size: 0.875rem;
  line-height: 1.25rem;
  text-align: center;
  margin: 0.25rem;
  text-transform: capitalize;
}

.emotion-0 .calendar .react-datepicker__day,
.emotion-0 .calendar .react-datepicker__month {
  color: #727683;
  font-weight: 500;
  font-size: 1rem;
  margin-left: 0.25rem;
  margin-right: 0.25rem;
}

.emotion-0 .calendar .react-datepicker__day {
  width: 2rem;
  height: 2rem;
}

.emotion-0 .calendar .react-datepicker__month-text {
  height: 2rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 .calendar .react-datepicker__day--outside-month {
  color: #b5b7bd;
  font-weight: 500;
  font-size: 1rem;
}

.emotion-0 .calendar .react-datepicker__day--selected,
.emotion-0 .calendar .react-datepicker__month-text--selected {
  color: #ffffff;
  background-color: #8c40ef;
}

.emotion-0 .calendar .react-datepicker__day--selected[aria-disabled="true"],
.emotion-0 .calendar .react-datepicker__month-text--selected[aria-disabled="true"],
.emotion-0 .calendar .react-datepicker__day--selected:disabled,
.emotion-0 .calendar .react-datepicker__month-text--selected:disabled {
  color: #ffffff;
  background-color: #e5dbfd;
}

.emotion-0 .calendar .react-datepicker__day--in-selecting-range,
.emotion-0 .calendar .react-datepicker__month-text--in-selecting-range {
  color: #641cb3;
  background-color: #f1eefc;
}

.emotion-0 .calendar .react-datepicker__day--in-selecting-range[aria-disabled="true"],
.emotion-0 .calendar .react-datepicker__month-text--in-selecting-range[aria-disabled="true"],
.emotion-0 .calendar .react-datepicker__day--in-selecting-range:disabled,
.emotion-0 .calendar .react-datepicker__month-text--in-selecting-range:disabled {
  color: #d8c5fc;
  background-color: #f6f5fd;
}

.emotion-0 .calendar .react-datepicker__day--in-range,
.emotion-0 .calendar .react-datepicker__month-text--in-range {
  color: #641cb3;
  background-color: #f1eefc;
}

.emotion-0 .calendar .react-datepicker__day--in-range[aria-disabled="true"],
.emotion-0 .calendar .react-datepicker__month-text--in-range[aria-disabled="true"],
.emotion-0 .calendar .react-datepicker__day--in-range:disabled,
.emotion-0 .calendar .react-datepicker__month-text--in-range:disabled {
  color: #d8c5fc;
  background-color: #f6f5fd;
}

.emotion-0 .calendar .react-datepicker__day--range-start,
.emotion-0 .calendar .react-datepicker__month-text--range-start {
  color: #ffffff;
  background-color: #8c40ef;
}

.emotion-0 .calendar .react-datepicker__day--range-start[aria-disabled="true"],
.emotion-0 .calendar .react-datepicker__month-text--range-start[aria-disabled="true"],
.emotion-0 .calendar .react-datepicker__day--range-start:disabled,
.emotion-0 .calendar .react-datepicker__month-text--range-start:disabled {
  color: #ffffff;
  background-color: #e5dbfd;
}

.emotion-0 .calendar .react-datepicker__day--range-end,
.emotion-0 .calendar .react-datepicker__month-text--range-end {
  color: #ffffff;
  background-color: #8c40ef;
}

.emotion-0 .calendar .react-datepicker__day--range-end[aria-disabled="true"],
.emotion-0 .calendar .react-datepicker__month-text--range-end[aria-disabled="true"],
.emotion-0 .calendar .react-datepicker__day--range-end:disabled,
.emotion-0 .calendar .react-datepicker__month-text--range-end:disabled {
  color: #ffffff;
  background-color: #e5dbfd;
}

.emotion-0 .calendar .react-datepicker__day--keyboard-selected,
.emotion-0 .calendar .react-datepicker__month-text--keyboard-selected {
  color: #ffffff;
  background-color: #8c40ef;
}

.emotion-0 .calendar .react-datepicker__day:hover,
.emotion-0 .calendar .react-datepicker__month-text:hover {
  color: #222638;
  background-color: #e9eaeb;
}

.emotion-0 .calendar .react-datepicker__day--disabled,
.emotion-0 .calendar .react-datepicker__month-text--disabled {
  color: #b5b7bd;
}

.emotion-0 .calendar .react-datepicker__day--disabled:hover,
.emotion-0 .calendar .react-datepicker__month-text--disabled:hover {
  color: #b5b7bd;
  background-color: transparent;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 3rem;
  background: #ffffff;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
}

.emotion-4>.emotion-7 {
  color: #3f4250;
}

.emotion-4>.emotion-7::-webkit-input-placeholder {
  color: #727683;
}

.emotion-4>.emotion-7::-moz-placeholder {
  color: #727683;
}

.emotion-4>.emotion-7:-ms-input-placeholder {
  color: #727683;
}

.emotion-4>.emotion-7::placeholder {
  color: #727683;
}

.emotion-4[data-success='true'] {
  border-color: #22674e;
}

.emotion-4[data-error='true'] {
  border-color: #b3144d;
}

.emotion-4[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.emotion-4[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.emotion-4[data-disabled='true']>.emotion-7 {
  color: #b5b7bd;
}

.emotion-4[data-disabled='true']>.emotion-7::-webkit-input-placeholder {
  color: #b5b7bd;
}

.emotion-4[data-disabled='true']>.emotion-7::-moz-placeholder {
  color: #b5b7bd;
}

.emotion-4[data-disabled='true']>.emotion-7:-ms-input-placeholder {
  color: #b5b7bd;
}

.emotion-4[data-disabled='true']>.emotion-7::placeholder {
  color: #b5b7bd;
}

.emotion-4:not([data-disabled='true']):not([data-readonly]):hover {
  border-color: #8c40ef;
}

.emotion-6 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  outline: none;
  height: 100%;
  width: 100%;
  padding-left: 1rem;
  background: transparent;
  font-size: 0.875rem;
}

.emotion-6[data-size='large'] {
  font-size: 1rem;
}

.emotion-6[data-size='small'] {
  padding-left: 0.5rem;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding: 0 1rem;
  border-left: 1px solid;
  border-color: inherit;
}

.emotion-10 {
  vertical-align: middle;
  fill: #3f4250;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.emotion-10 .fillStroke {
  stroke: #3f4250;
  fill: none;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
    >
      <div
        class="emotion-0 emotion-1"
      >
        <div
          class="react-datepicker-wrapper"
        >
          <div
            class="react-datepicker__input-container"
          >
            <div
              class="emotion-2 emotion-3"
            >
              <div>
                <div
                  class="emotion-4 emotion-5"
                  data-disabled="false"
                  data-error="false"
                  data-readonly="false"
                  data-success="false"
                >
                  <input
                    aria-invalid="false"
                    class="emotion-6 emotion-7"
                    data-size="large"
                    id=":r2:"
                    name="test"
                    type="text"
                    value=""
                  />
                  <div
                    class="emotion-8 emotion-9"
                  >
                    <svg
                      class="emotion-10 emotion-11"
                      viewBox="0 0 20 20"
                    >
                      <path
                        d="M5.25 12a.75.75 0 0 1 .75-.75h.01a.75.75 0 0 1 .75.75v.01a.75.75 0 0 1-.75.75H6a.75.75 0 0 1-.75-.75zM6 13.25a.75.75 0 0 0-.75.75v.01c0 .414.336.75.75.75h.01a.75.75 0 0 0 .75-.75V14a.75.75 0 0 0-.75-.75zM7.25 12a.75.75 0 0 1 .75-.75h.01a.75.75 0 0 1 .75.75v.01a.75.75 0 0 1-.75.75H8a.75.75 0 0 1-.75-.75zM8 13.25a.75.75 0 0 0-.75.75v.01c0 .414.336.75.75.75h.01a.75.75 0 0 0 .75-.75V14a.75.75 0 0 0-.75-.75zM9.25 10a.75.75 0 0 1 .75-.75h.01a.75.75 0 0 1 .75.75v.01a.75.75 0 0 1-.75.75H10a.75.75 0 0 1-.75-.75zm.75 1.25a.75.75 0 0 0-.75.75v.01c0 .414.336.75.75.75h.01a.75.75 0 0 0 .75-.75V12a.75.75 0 0 0-.75-.75zM9.25 14a.75.75 0 0 1 .75-.75h.01a.75.75 0 0 1 .75.75v.01a.75.75 0 0 1-.75.75H10a.75.75 0 0 1-.75-.75zM12 9.25a.75.75 0 0 0-.75.75v.01c0 .414.336.75.75.75h.01a.75.75 0 0 0 .75-.75V10a.75.75 0 0 0-.75-.75zM11.25 12a.75.75 0 0 1 .75-.75h.01a.75.75 0 0 1 .75.75v.01a.75.75 0 0 1-.75.75H12a.75.75 0 0 1-.75-.75zm.75 1.25a.75.75 0 0 0-.75.75v.01c0 .414.336.75.75.75h.01a.75.75 0 0 0 .75-.75V14a.75.75 0 0 0-.75-.75zM13.25 10a.75.75 0 0 1 .75-.75h.01a.75.75 0 0 1 .75.75v.01a.75.75 0 0 1-.75.75H14a.75.75 0 0 1-.75-.75zm.75 1.25a.75.75 0 0 0-.75.75v.01c0 .414.336.75.75.75h.01a.75.75 0 0 0 .75-.75V12a.75.75 0 0 0-.75-.75z"
                      />
                      <path
                        clip-rule="evenodd"
                        d="M5.75 2a.75.75 0 0 1 .75.75V4h7V2.75a.75.75 0 0 1 1.5 0V4h.25A2.75 2.75 0 0 1 18 6.75v8.5A2.75 2.75 0 0 1 15.25 18H4.75A2.75 2.75 0 0 1 2 15.25v-8.5A2.75 2.75 0 0 1 4.75 4H5V2.75A.75.75 0 0 1 5.75 2m-1 5.5c-.69 0-1.25.56-1.25 1.25v6.5c0 .69.56 1.25 1.25 1.25h10.5c.69 0 1.25-.56 1.25-1.25v-6.5c0-.69-.56-1.25-1.25-1.25z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`DateField > should render correctly disabled 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 100%;
}

.emotion-0 div.react-datepicker-wrapper {
  display: block;
}

.emotion-0 div.react-datepicker__input-container {
  display: block;
}

.emotion-0 div.react-datepicker__triangle {
  display: none;
}

.emotion-0 div.react-datepicker__month-container {
  padding: 1rem;
  width: 20rem;
}

.emotion-0 .react-datepicker-popper {
  z-index: 1000;
}

.emotion-0 .calendar {
  font-family: Inter,Asap,sans-serif;
  border-color: #e9eaeb;
  background-color: #ffffff;
  box-shadow:0: 0px 4px 8px 0px #22263829;
  1: 0px 8px 24px 0px #2226383d;
}

.emotion-0 .calendar .react-datepicker__header {
  color: #3f4250;
  background-color: #ffffff;
  border-bottom: none;
  text-align: inherit;
  display: block;
  padding-top: 0;
  position: inherit;
}

.emotion-0 .calendar .react-datepicker__triangle {
  border-bottom-color: #f9f9fa;
}

.emotion-0 .calendar .react-datepicker__month {
  margin: 0;
}

.emotion-0 .calendar .react-datepicker__day-names {
  margin-top: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-0 .calendar .react-datepicker__day-name {
  font-family: Inter,Asap,sans-serif;
  color: #3f4250;
  font-weight: 500;
  font-size: 0.875rem;
  line-height: 1.25rem;
  text-align: center;
  margin: 0.25rem;
  text-transform: capitalize;
}

.emotion-0 .calendar .react-datepicker__day,
.emotion-0 .calendar .react-datepicker__month {
  color: #727683;
  font-weight: 500;
  font-size: 1rem;
  margin-left: 0.25rem;
  margin-right: 0.25rem;
}

.emotion-0 .calendar .react-datepicker__day {
  width: 2rem;
  height: 2rem;
}

.emotion-0 .calendar .react-datepicker__month-text {
  height: 2rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 .calendar .react-datepicker__day--outside-month {
  color: #b5b7bd;
  font-weight: 500;
  font-size: 1rem;
}

.emotion-0 .calendar .react-datepicker__day--selected,
.emotion-0 .calendar .react-datepicker__month-text--selected {
  color: #ffffff;
  background-color: #8c40ef;
}

.emotion-0 .calendar .react-datepicker__day--selected[aria-disabled="true"],
.emotion-0 .calendar .react-datepicker__month-text--selected[aria-disabled="true"],
.emotion-0 .calendar .react-datepicker__day--selected:disabled,
.emotion-0 .calendar .react-datepicker__month-text--selected:disabled {
  color: #ffffff;
  background-color: #e5dbfd;
}

.emotion-0 .calendar .react-datepicker__day--in-selecting-range,
.emotion-0 .calendar .react-datepicker__month-text--in-selecting-range {
  color: #641cb3;
  background-color: #f1eefc;
}

.emotion-0 .calendar .react-datepicker__day--in-selecting-range[aria-disabled="true"],
.emotion-0 .calendar .react-datepicker__month-text--in-selecting-range[aria-disabled="true"],
.emotion-0 .calendar .react-datepicker__day--in-selecting-range:disabled,
.emotion-0 .calendar .react-datepicker__month-text--in-selecting-range:disabled {
  color: #d8c5fc;
  background-color: #f6f5fd;
}

.emotion-0 .calendar .react-datepicker__day--in-range,
.emotion-0 .calendar .react-datepicker__month-text--in-range {
  color: #641cb3;
  background-color: #f1eefc;
}

.emotion-0 .calendar .react-datepicker__day--in-range[aria-disabled="true"],
.emotion-0 .calendar .react-datepicker__month-text--in-range[aria-disabled="true"],
.emotion-0 .calendar .react-datepicker__day--in-range:disabled,
.emotion-0 .calendar .react-datepicker__month-text--in-range:disabled {
  color: #d8c5fc;
  background-color: #f6f5fd;
}

.emotion-0 .calendar .react-datepicker__day--range-start,
.emotion-0 .calendar .react-datepicker__month-text--range-start {
  color: #ffffff;
  background-color: #8c40ef;
}

.emotion-0 .calendar .react-datepicker__day--range-start[aria-disabled="true"],
.emotion-0 .calendar .react-datepicker__month-text--range-start[aria-disabled="true"],
.emotion-0 .calendar .react-datepicker__day--range-start:disabled,
.emotion-0 .calendar .react-datepicker__month-text--range-start:disabled {
  color: #ffffff;
  background-color: #e5dbfd;
}

.emotion-0 .calendar .react-datepicker__day--range-end,
.emotion-0 .calendar .react-datepicker__month-text--range-end {
  color: #ffffff;
  background-color: #8c40ef;
}

.emotion-0 .calendar .react-datepicker__day--range-end[aria-disabled="true"],
.emotion-0 .calendar .react-datepicker__month-text--range-end[aria-disabled="true"],
.emotion-0 .calendar .react-datepicker__day--range-end:disabled,
.emotion-0 .calendar .react-datepicker__month-text--range-end:disabled {
  color: #ffffff;
  background-color: #e5dbfd;
}

.emotion-0 .calendar .react-datepicker__day--keyboard-selected,
.emotion-0 .calendar .react-datepicker__month-text--keyboard-selected {
  color: #ffffff;
  background-color: #8c40ef;
}

.emotion-0 .calendar .react-datepicker__day:hover,
.emotion-0 .calendar .react-datepicker__month-text:hover {
  color: #222638;
  background-color: #e9eaeb;
}

.emotion-0 .calendar .react-datepicker__day--disabled,
.emotion-0 .calendar .react-datepicker__month-text--disabled {
  color: #b5b7bd;
}

.emotion-0 .calendar .react-datepicker__day--disabled:hover,
.emotion-0 .calendar .react-datepicker__month-text--disabled:hover {
  color: #b5b7bd;
  background-color: transparent;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 3rem;
  background: #ffffff;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
}

.emotion-4>.emotion-7 {
  color: #3f4250;
}

.emotion-4>.emotion-7::-webkit-input-placeholder {
  color: #727683;
}

.emotion-4>.emotion-7::-moz-placeholder {
  color: #727683;
}

.emotion-4>.emotion-7:-ms-input-placeholder {
  color: #727683;
}

.emotion-4>.emotion-7::placeholder {
  color: #727683;
}

.emotion-4[data-success='true'] {
  border-color: #22674e;
}

.emotion-4[data-error='true'] {
  border-color: #b3144d;
}

.emotion-4[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.emotion-4[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.emotion-4[data-disabled='true']>.emotion-7 {
  color: #b5b7bd;
}

.emotion-4[data-disabled='true']>.emotion-7::-webkit-input-placeholder {
  color: #b5b7bd;
}

.emotion-4[data-disabled='true']>.emotion-7::-moz-placeholder {
  color: #b5b7bd;
}

.emotion-4[data-disabled='true']>.emotion-7:-ms-input-placeholder {
  color: #b5b7bd;
}

.emotion-4[data-disabled='true']>.emotion-7::placeholder {
  color: #b5b7bd;
}

.emotion-4:not([data-disabled='true']):not([data-readonly]):hover {
  border-color: #8c40ef;
}

.emotion-6 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  outline: none;
  height: 100%;
  width: 100%;
  padding-left: 1rem;
  background: transparent;
  font-size: 0.875rem;
}

.emotion-6[data-size='large'] {
  font-size: 1rem;
}

.emotion-6[data-size='small'] {
  padding-left: 0.5rem;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding: 0 1rem;
  border-left: 1px solid;
  border-color: inherit;
}

.emotion-10 {
  vertical-align: middle;
  fill: #b5b7bd;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.emotion-10 .fillStroke {
  stroke: #b5b7bd;
  fill: none;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
    >
      <div
        class="emotion-0 emotion-1"
      >
        <div
          class="react-datepicker-wrapper"
        >
          <div
            class="react-datepicker__input-container"
          >
            <div
              class="emotion-2 emotion-3"
            >
              <div>
                <div
                  class="emotion-4 emotion-5"
                  data-disabled="true"
                  data-error="false"
                  data-readonly="false"
                  data-success="false"
                >
                  <input
                    aria-invalid="false"
                    class="emotion-6 emotion-7"
                    data-size="large"
                    disabled=""
                    id=":r6:"
                    name="test"
                    type="text"
                    value=""
                  />
                  <div
                    class="emotion-8 emotion-9"
                  >
                    <svg
                      class="emotion-10 emotion-11"
                      viewBox="0 0 20 20"
                    >
                      <path
                        d="M5.25 12a.75.75 0 0 1 .75-.75h.01a.75.75 0 0 1 .75.75v.01a.75.75 0 0 1-.75.75H6a.75.75 0 0 1-.75-.75zM6 13.25a.75.75 0 0 0-.75.75v.01c0 .414.336.75.75.75h.01a.75.75 0 0 0 .75-.75V14a.75.75 0 0 0-.75-.75zM7.25 12a.75.75 0 0 1 .75-.75h.01a.75.75 0 0 1 .75.75v.01a.75.75 0 0 1-.75.75H8a.75.75 0 0 1-.75-.75zM8 13.25a.75.75 0 0 0-.75.75v.01c0 .414.336.75.75.75h.01a.75.75 0 0 0 .75-.75V14a.75.75 0 0 0-.75-.75zM9.25 10a.75.75 0 0 1 .75-.75h.01a.75.75 0 0 1 .75.75v.01a.75.75 0 0 1-.75.75H10a.75.75 0 0 1-.75-.75zm.75 1.25a.75.75 0 0 0-.75.75v.01c0 .414.336.75.75.75h.01a.75.75 0 0 0 .75-.75V12a.75.75 0 0 0-.75-.75zM9.25 14a.75.75 0 0 1 .75-.75h.01a.75.75 0 0 1 .75.75v.01a.75.75 0 0 1-.75.75H10a.75.75 0 0 1-.75-.75zM12 9.25a.75.75 0 0 0-.75.75v.01c0 .414.336.75.75.75h.01a.75.75 0 0 0 .75-.75V10a.75.75 0 0 0-.75-.75zM11.25 12a.75.75 0 0 1 .75-.75h.01a.75.75 0 0 1 .75.75v.01a.75.75 0 0 1-.75.75H12a.75.75 0 0 1-.75-.75zm.75 1.25a.75.75 0 0 0-.75.75v.01c0 .414.336.75.75.75h.01a.75.75 0 0 0 .75-.75V14a.75.75 0 0 0-.75-.75zM13.25 10a.75.75 0 0 1 .75-.75h.01a.75.75 0 0 1 .75.75v.01a.75.75 0 0 1-.75.75H14a.75.75 0 0 1-.75-.75zm.75 1.25a.75.75 0 0 0-.75.75v.01c0 .414.336.75.75.75h.01a.75.75 0 0 0 .75-.75V12a.75.75 0 0 0-.75-.75z"
                      />
                      <path
                        clip-rule="evenodd"
                        d="M5.75 2a.75.75 0 0 1 .75.75V4h7V2.75a.75.75 0 0 1 1.5 0V4h.25A2.75 2.75 0 0 1 18 6.75v8.5A2.75 2.75 0 0 1 15.25 18H4.75A2.75 2.75 0 0 1 2 15.25v-8.5A2.75 2.75 0 0 1 4.75 4H5V2.75A.75.75 0 0 1 5.75 2m-1 5.5c-.69 0-1.25.56-1.25 1.25v6.5c0 .69.56 1.25 1.25 1.25h10.5c.69 0 1.25-.56 1.25-1.25v-6.5c0-.69-.56-1.25-1.25-1.25z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`DateField > should trigger events 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 100%;
}

.emotion-0 div.react-datepicker-wrapper {
  display: block;
}

.emotion-0 div.react-datepicker__input-container {
  display: block;
}

.emotion-0 div.react-datepicker__triangle {
  display: none;
}

.emotion-0 div.react-datepicker__month-container {
  padding: 1rem;
  width: 20rem;
}

.emotion-0 .react-datepicker-popper {
  z-index: 1000;
}

.emotion-0 .calendar {
  font-family: Inter,Asap,sans-serif;
  border-color: #e9eaeb;
  background-color: #ffffff;
  box-shadow:0: 0px 4px 8px 0px #22263829;
  1: 0px 8px 24px 0px #2226383d;
}

.emotion-0 .calendar .react-datepicker__header {
  color: #3f4250;
  background-color: #ffffff;
  border-bottom: none;
  text-align: inherit;
  display: block;
  padding-top: 0;
  position: inherit;
}

.emotion-0 .calendar .react-datepicker__triangle {
  border-bottom-color: #f9f9fa;
}

.emotion-0 .calendar .react-datepicker__month {
  margin: 0;
}

.emotion-0 .calendar .react-datepicker__day-names {
  margin-top: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-0 .calendar .react-datepicker__day-name {
  font-family: Inter,Asap,sans-serif;
  color: #3f4250;
  font-weight: 500;
  font-size: 0.875rem;
  line-height: 1.25rem;
  text-align: center;
  margin: 0.25rem;
  text-transform: capitalize;
}

.emotion-0 .calendar .react-datepicker__day,
.emotion-0 .calendar .react-datepicker__month {
  color: #727683;
  font-weight: 500;
  font-size: 1rem;
  margin-left: 0.25rem;
  margin-right: 0.25rem;
}

.emotion-0 .calendar .react-datepicker__day {
  width: 2rem;
  height: 2rem;
}

.emotion-0 .calendar .react-datepicker__month-text {
  height: 2rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 .calendar .react-datepicker__day--outside-month {
  color: #b5b7bd;
  font-weight: 500;
  font-size: 1rem;
}

.emotion-0 .calendar .react-datepicker__day--selected,
.emotion-0 .calendar .react-datepicker__month-text--selected {
  color: #ffffff;
  background-color: #8c40ef;
}

.emotion-0 .calendar .react-datepicker__day--selected[aria-disabled="true"],
.emotion-0 .calendar .react-datepicker__month-text--selected[aria-disabled="true"],
.emotion-0 .calendar .react-datepicker__day--selected:disabled,
.emotion-0 .calendar .react-datepicker__month-text--selected:disabled {
  color: #ffffff;
  background-color: #e5dbfd;
}

.emotion-0 .calendar .react-datepicker__day--in-selecting-range,
.emotion-0 .calendar .react-datepicker__month-text--in-selecting-range {
  color: #641cb3;
  background-color: #f1eefc;
}

.emotion-0 .calendar .react-datepicker__day--in-selecting-range[aria-disabled="true"],
.emotion-0 .calendar .react-datepicker__month-text--in-selecting-range[aria-disabled="true"],
.emotion-0 .calendar .react-datepicker__day--in-selecting-range:disabled,
.emotion-0 .calendar .react-datepicker__month-text--in-selecting-range:disabled {
  color: #d8c5fc;
  background-color: #f6f5fd;
}

.emotion-0 .calendar .react-datepicker__day--in-range,
.emotion-0 .calendar .react-datepicker__month-text--in-range {
  color: #641cb3;
  background-color: #f1eefc;
}

.emotion-0 .calendar .react-datepicker__day--in-range[aria-disabled="true"],
.emotion-0 .calendar .react-datepicker__month-text--in-range[aria-disabled="true"],
.emotion-0 .calendar .react-datepicker__day--in-range:disabled,
.emotion-0 .calendar .react-datepicker__month-text--in-range:disabled {
  color: #d8c5fc;
  background-color: #f6f5fd;
}

.emotion-0 .calendar .react-datepicker__day--range-start,
.emotion-0 .calendar .react-datepicker__month-text--range-start {
  color: #ffffff;
  background-color: #8c40ef;
}

.emotion-0 .calendar .react-datepicker__day--range-start[aria-disabled="true"],
.emotion-0 .calendar .react-datepicker__month-text--range-start[aria-disabled="true"],
.emotion-0 .calendar .react-datepicker__day--range-start:disabled,
.emotion-0 .calendar .react-datepicker__month-text--range-start:disabled {
  color: #ffffff;
  background-color: #e5dbfd;
}

.emotion-0 .calendar .react-datepicker__day--range-end,
.emotion-0 .calendar .react-datepicker__month-text--range-end {
  color: #ffffff;
  background-color: #8c40ef;
}

.emotion-0 .calendar .react-datepicker__day--range-end[aria-disabled="true"],
.emotion-0 .calendar .react-datepicker__month-text--range-end[aria-disabled="true"],
.emotion-0 .calendar .react-datepicker__day--range-end:disabled,
.emotion-0 .calendar .react-datepicker__month-text--range-end:disabled {
  color: #ffffff;
  background-color: #e5dbfd;
}

.emotion-0 .calendar .react-datepicker__day--keyboard-selected,
.emotion-0 .calendar .react-datepicker__month-text--keyboard-selected {
  color: #ffffff;
  background-color: #8c40ef;
}

.emotion-0 .calendar .react-datepicker__day:hover,
.emotion-0 .calendar .react-datepicker__month-text:hover {
  color: #222638;
  background-color: #e9eaeb;
}

.emotion-0 .calendar .react-datepicker__day--disabled,
.emotion-0 .calendar .react-datepicker__month-text--disabled {
  color: #b5b7bd;
}

.emotion-0 .calendar .react-datepicker__day--disabled:hover,
.emotion-0 .calendar .react-datepicker__month-text--disabled:hover {
  color: #b5b7bd;
  background-color: transparent;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 3rem;
  background: #ffffff;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
  border: 1px solid #8c40ef;
}

.emotion-4>.emotion-7 {
  color: #3f4250;
}

.emotion-4>.emotion-7::-webkit-input-placeholder {
  color: #727683;
}

.emotion-4>.emotion-7::-moz-placeholder {
  color: #727683;
}

.emotion-4>.emotion-7:-ms-input-placeholder {
  color: #727683;
}

.emotion-4>.emotion-7::placeholder {
  color: #727683;
}

.emotion-4[data-success='true'] {
  border-color: #22674e;
}

.emotion-4[data-error='true'] {
  border-color: #b3144d;
}

.emotion-4[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.emotion-4[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.emotion-4[data-disabled='true']>.emotion-7 {
  color: #b5b7bd;
}

.emotion-4[data-disabled='true']>.emotion-7::-webkit-input-placeholder {
  color: #b5b7bd;
}

.emotion-4[data-disabled='true']>.emotion-7::-moz-placeholder {
  color: #b5b7bd;
}

.emotion-4[data-disabled='true']>.emotion-7:-ms-input-placeholder {
  color: #b5b7bd;
}

.emotion-4[data-disabled='true']>.emotion-7::placeholder {
  color: #b5b7bd;
}

.emotion-4:not([data-disabled='true']):not([data-readonly]):hover {
  border-color: #8c40ef;
}

.emotion-6 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  outline: none;
  height: 100%;
  width: 100%;
  padding-left: 1rem;
  background: transparent;
  font-size: 0.875rem;
}

.emotion-6[data-size='large'] {
  font-size: 1rem;
}

.emotion-6[data-size='small'] {
  padding-left: 0.5rem;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding: 0 1rem;
  border-left: 1px solid;
  border-color: inherit;
}

.emotion-10 {
  vertical-align: middle;
  fill: #3f4250;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.emotion-10 .fillStroke {
  stroke: #3f4250;
  fill: none;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
    >
      <div
        class="emotion-0 emotion-1"
      >
        <div
          class="react-datepicker-wrapper"
        >
          <div
            class="react-datepicker__input-container"
          >
            <div
              class="emotion-2 emotion-3"
            >
              <div>
                <div
                  class="emotion-4 emotion-5"
                  data-disabled="false"
                  data-error="false"
                  data-readonly="false"
                  data-success="false"
                >
                  <input
                    aria-invalid="false"
                    class="emotion-6 emotion-7"
                    data-size="large"
                    id=":ra:"
                    name="test"
                    type="text"
                    value="08/28/2022"
                  />
                  <div
                    class="emotion-8 emotion-9"
                  >
                    <svg
                      class="emotion-10 emotion-11"
                      viewBox="0 0 20 20"
                    >
                      <path
                        d="M5.25 12a.75.75 0 0 1 .75-.75h.01a.75.75 0 0 1 .75.75v.01a.75.75 0 0 1-.75.75H6a.75.75 0 0 1-.75-.75zM6 13.25a.75.75 0 0 0-.75.75v.01c0 .414.336.75.75.75h.01a.75.75 0 0 0 .75-.75V14a.75.75 0 0 0-.75-.75zM7.25 12a.75.75 0 0 1 .75-.75h.01a.75.75 0 0 1 .75.75v.01a.75.75 0 0 1-.75.75H8a.75.75 0 0 1-.75-.75zM8 13.25a.75.75 0 0 0-.75.75v.01c0 .414.336.75.75.75h.01a.75.75 0 0 0 .75-.75V14a.75.75 0 0 0-.75-.75zM9.25 10a.75.75 0 0 1 .75-.75h.01a.75.75 0 0 1 .75.75v.01a.75.75 0 0 1-.75.75H10a.75.75 0 0 1-.75-.75zm.75 1.25a.75.75 0 0 0-.75.75v.01c0 .414.336.75.75.75h.01a.75.75 0 0 0 .75-.75V12a.75.75 0 0 0-.75-.75zM9.25 14a.75.75 0 0 1 .75-.75h.01a.75.75 0 0 1 .75.75v.01a.75.75 0 0 1-.75.75H10a.75.75 0 0 1-.75-.75zM12 9.25a.75.75 0 0 0-.75.75v.01c0 .414.336.75.75.75h.01a.75.75 0 0 0 .75-.75V10a.75.75 0 0 0-.75-.75zM11.25 12a.75.75 0 0 1 .75-.75h.01a.75.75 0 0 1 .75.75v.01a.75.75 0 0 1-.75.75H12a.75.75 0 0 1-.75-.75zm.75 1.25a.75.75 0 0 0-.75.75v.01c0 .414.336.75.75.75h.01a.75.75 0 0 0 .75-.75V14a.75.75 0 0 0-.75-.75zM13.25 10a.75.75 0 0 1 .75-.75h.01a.75.75 0 0 1 .75.75v.01a.75.75 0 0 1-.75.75H14a.75.75 0 0 1-.75-.75zm.75 1.25a.75.75 0 0 0-.75.75v.01c0 .414.336.75.75.75h.01a.75.75 0 0 0 .75-.75V12a.75.75 0 0 0-.75-.75z"
                      />
                      <path
                        clip-rule="evenodd"
                        d="M5.75 2a.75.75 0 0 1 .75.75V4h7V2.75a.75.75 0 0 1 1.5 0V4h.25A2.75 2.75 0 0 1 18 6.75v8.5A2.75 2.75 0 0 1 15.25 18H4.75A2.75 2.75 0 0 1 2 15.25v-8.5A2.75 2.75 0 0 1 4.75 4H5V2.75A.75.75 0 0 1 5.75 2m-1 5.5c-.69 0-1.25.56-1.25 1.25v6.5c0 .69.56 1.25 1.25 1.25h10.5c.69 0 1.25-.56 1.25-1.25v-6.5c0-.69-.56-1.25-1.25-1.25z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
